# tkapp

./: LICENSE  README.md  pyproject.toml
src/tkapp/: DataType.py  Descriptor.py  Descriptor.pyi  Error.py  MissingModule.py  MissingModule.pyi  Validator.py  Validator.pyi  Widget.py  Widget.pyi  Widgets.py  __init__.py  __init__.pyi
src/tkapp/descriptor/: Skeleton.py  Validator.py  __init__.py
src/tkapp/error/: ErrorClasses.py  MissingClass.py  __init__.py
tests/: __init__.py  descriptor.py  tests.py
