[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"


[project]
name = "tkapp"
version = "0.0.0"
description = "This module introduces classes and functions to create apps."

readme = "README.md"
license = {file="LICENSE"}

authors = [
    {name="AtoKashinoki", email="atokashinoki@gmail.com"}
]

dependencies = [
    "Descriptors@git+https://github.com/AtoKashinoki/Descriptors.git",
    "ConfigManager@git+https://github.com/AtoKashinoki/ConfigManager.git",
]

requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/pygameapp"
"Bug Tracker" = "https://github.com/AtoKashinoki/pygameapp/issues"
